Header done (but not mobile friendly)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,26 @@
     </head>
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="header-content">
+        <div class="logo-search-container">
+          <a href="index.html"
+            ><img src="img/logo/logo.svg" alt="Vinbolaget"
+          /></a>
+          <form action="viner/viner.html" autocomplete="off">
+            <input type="search" name="search" placeholder="Sök vin..." />
+          </form>
+        </div>
+        <nav>
+          <ul>
+            <li class="hidden"><a href="#">Sök</a></li>
+            <li><a href="#">Om Vinbolaget</a></li>
+            <li><a href="#">Viner</a></li>
+            <li><a href="#">Varukorg</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <main class="startsida"></main>
     <footer></footer>
   </body>
