Hamburger functionality (not mobile friendly)

--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
             <input type="search" name="search" placeholder="Sök vin..." />
           </form>
         </div>
-        <nav>
+        <button class="sveriges-godaste-hamburgare">
+          <span class="menu">Meny</span>
+          <span class="line-container">
+            <span class="line"></span>
+            <span class="line"></span>
+            <span class="line"></span>
+          </span>
+        </button>
+        <nav class="hideNavbarAnimation">
           <ul>
             <li class="hidden"><a href="#">Sök</a></li>
             <li><a href="#">Om Vinbolaget</a></li>
@@ -46,5 +54,6 @@
     </header>
     <main class="startsida"></main>
     <footer></footer>
+    <script src="js/header.js"></script>
   </body>
 </html>
