Page startsida section latest-news done + responsive

--- a/index.html
+++ b/index.html
@@ -264,6 +264,216 @@
           </li>
         </ul>
       </section>
+      <section class="latest-news">
+        <h2>Aktuellt på Vinbolaget</h2>
+        <p class="h2-subheading">Allt om våra nyheter inom viner</p>
+        <div class="news">
+          <a href="#">
+            <article>
+              <div class="news-img-wrapper">
+                <picture>
+                  <source
+                    type="image/avif"
+                    media="(max-width: 480px)"
+                    srcset="
+                      img/news/new-assortment/new-assortment-mobile@1x.avif 1x,
+                      img/news/new-assortment/new-assortment-mobile@2x.avif 2x,
+                      img/news/new-assortment/new-assortment-mobile@3x.avif 3x
+                    "
+                  />
+                  <source
+                    type="image/webp"
+                    media="(max-width: 480px)"
+                    srcset="
+                      img/news/new-assortment/new-assortment-mobile@1x.webp 1x,
+                      img/news/new-assortment/new-assortment-mobile@2x.webp 2x,
+                      img/news/new-assortment/new-assortment-mobile@3x.webp 3x
+                    "
+                  />
+                  <source
+                    type="image/jpg"
+                    media="(max-width: 480px)"
+                    srcset="
+                      img/news/new-assortment/new-assortment-mobile@1x.jpg 1x,
+                      img/news/new-assortment/new-assortment-mobile@2x.jpg 2x,
+                      img/news/new-assortment/new-assortment-mobile@3x.jpg 3x
+                    "
+                  />
+                  <source
+                    type="image/avif"
+                    srcset="
+                      img/news/new-assortment/new-assortment@1x.avif 1x,
+                      img/news/new-assortment/new-assortment@2x.avif 2x,
+                      img/news/new-assortment/new-assortment@3x.avif 3x
+                    "
+                  />
+                  <source
+                    type="image/webp"
+                    srcset="
+                      img/news/new-assortment/new-assortment@1x.webp 1x,
+                      img/news/new-assortment/new-assortment@2x.webp 2x,
+                      img/news/new-assortment/new-assortment@3x.webp 3x
+                    "
+                  />
+                  <source
+                    type="image/jpg"
+                    srcset="
+                      img/news/new-assortment/new-assortment@1x.jpg 1x,
+                      img/news/new-assortment/new-assortment@2x.jpg 2x,
+                      img/news/new-assortment/new-assortment@3x.jpg 3x
+                    "
+                  />
+                  <img
+                    src="img/news/new-assortment/new-assortment@1x.jpg"
+                    alt="Gröna vindruvor"
+                    loading="lazy"
+                  />
+                </picture>
+              </div>
+              <div class="content">
+                <p class="date">2025-01-03</p>
+                <h3>Nu lanserar vi ett nytt sortiment</h3>
+              </div>
+            </article>
+          </a>
+          <a href="#">
+            <article>
+              <div class="news-img-wrapper">
+                <picture>
+                  <source
+                    type="image/avif"
+                    media="(max-width: 480px)"
+                    srcset="
+                      img/news/new-assortment/new-assortment-mobile@1x.avif 1x,
+                      img/news/new-assortment/new-assortment-mobile@2x.avif 2x,
+                      img/news/new-assortment/new-assortment-mobile@3x.avif 3x
+                    "
+                  />
+                  <source
+                    type="image/webp"
+                    media="(max-width: 480px)"
+                    srcset="
+                      img/news/new-assortment/new-assortment-mobile@1x.webp 1x,
+                      img/news/new-assortment/new-assortment-mobile@2x.webp 2x,
+                      img/news/new-assortment/new-assortment-mobile@3x.webp 3x
+                    "
+                  />
+                  <source
+                    type="image/jpg"
+                    media="(max-width: 480px)"
+                    srcset="
+                      img/news/new-assortment/new-assortment-mobile@1x.jpg 1x,
+                      img/news/new-assortment/new-assortment-mobile@2x.jpg 2x,
+                      img/news/new-assortment/new-assortment-mobile@3x.jpg 3x
+                    "
+                  />
+                  <source
+                    type="image/avif"
+                    srcset="
+                      img/news/new-assortment/new-assortment@1x.avif 1x,
+                      img/news/new-assortment/new-assortment@2x.avif 2x,
+                      img/news/new-assortment/new-assortment@3x.avif 3x
+                    "
+                  />
+                  <source
+                    type="image/webp"
+                    srcset="
+                      img/news/new-assortment/new-assortment@1x.webp 1x,
+                      img/news/new-assortment/new-assortment@2x.webp 2x,
+                      img/news/new-assortment/new-assortment@3x.webp 3x
+                    "
+                  />
+                  <source
+                    type="image/jpg"
+                    srcset="
+                      img/news/new-assortment/new-assortment@1x.jpg 1x,
+                      img/news/new-assortment/new-assortment@2x.jpg 2x,
+                      img/news/new-assortment/new-assortment@3x.jpg 3x
+                    "
+                  />
+                  <img
+                    src="img/news/new-assortment/new-assortment@1x.jpg"
+                    alt="Gröna vindruvor"
+                    loading="lazy"
+                  />
+                </picture>
+              </div>
+              <div class="content">
+                <p class="date">2025-01-03</p>
+                <h3>Nu lanserar vi ett nytt sortiment</h3>
+              </div>
+            </article>
+          </a>
+          <a href="#">
+            <article>
+              <div class="news-img-wrapper">
+                <picture>
+                  <source
+                    type="image/avif"
+                    media="(max-width: 480px)"
+                    srcset="
+                      img/news/new-assortment/new-assortment-mobile@1x.avif 1x,
+                      img/news/new-assortment/new-assortment-mobile@2x.avif 2x,
+                      img/news/new-assortment/new-assortment-mobile@3x.avif 3x
+                    "
+                  />
+                  <source
+                    type="image/webp"
+                    media="(max-width: 480px)"
+                    srcset="
+                      img/news/new-assortment/new-assortment-mobile@1x.webp 1x,
+                      img/news/new-assortment/new-assortment-mobile@2x.webp 2x,
+                      img/news/new-assortment/new-assortment-mobile@3x.webp 3x
+                    "
+                  />
+                  <source
+                    type="image/jpg"
+                    media="(max-width: 480px)"
+                    srcset="
+                      img/news/new-assortment/new-assortment-mobile@1x.jpg 1x,
+                      img/news/new-assortment/new-assortment-mobile@2x.jpg 2x,
+                      img/news/new-assortment/new-assortment-mobile@3x.jpg 3x
+                    "
+                  />
+                  <source
+                    type="image/avif"
+                    srcset="
+                      img/news/new-assortment/new-assortment@1x.avif 1x,
+                      img/news/new-assortment/new-assortment@2x.avif 2x,
+                      img/news/new-assortment/new-assortment@3x.avif 3x
+                    "
+                  />
+                  <source
+                    type="image/webp"
+                    srcset="
+                      img/news/new-assortment/new-assortment@1x.webp 1x,
+                      img/news/new-assortment/new-assortment@2x.webp 2x,
+                      img/news/new-assortment/new-assortment@3x.webp 3x
+                    "
+                  />
+                  <source
+                    type="image/jpg"
+                    srcset="
+                      img/news/new-assortment/new-assortment@1x.jpg 1x,
+                      img/news/new-assortment/new-assortment@2x.jpg 2x,
+                      img/news/new-assortment/new-assortment@3x.jpg 3x
+                    "
+                  />
+                  <img
+                    src="img/news/new-assortment/new-assortment@1x.jpg"
+                    alt="Gröna vindruvor"
+                    loading="lazy"
+                  />
+                </picture>
+              </div>
+              <div class="content">
+                <p class="date">2025-01-03</p>
+                <h3>Nu lanserar vi ett nytt sortiment</h3>
+              </div>
+            </article>
+          </a>
+        </div>
+      </section>
     </main>
     <footer></footer>
     <script src="js/header.js"></script>
