Page startsida improved HTML-sematics
Changed from ul.products -> div.products and li -> article in section most-sold-products

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
       </section>
       <section class="most-sold-products">
         <h2>Våra mest sålda drycker</h2>
-        <ul class="products">
-          <li class="product">
+        <div class="products">
+          <article>
             <a href="#">
               <div class="product-img-wrapper">
                 <picture>
@@ -155,12 +155,12 @@
                 </picture>
               </div>
               <p class="country">Italien</p>
-              <p class="title">La Corde del Pozzo</p>
+              <h3 class="title">La Corde del Pozzo</h3>
               <p class="description">Bardolino</p>
               <p class="price">3000:-</p>
             </a>
-          </li>
-          <li class="product">
+          </article>
+          <article>
             <a href="#">
               <div class="product-img-wrapper">
                 <picture>
@@ -206,12 +206,12 @@
                 </picture>
               </div>
               <p class="country">Italien</p>
-              <p class="title">La Corde del Pozzo</p>
+              <h3 class="title">La Corde del Pozzo</h3>
               <p class="description">Bardolino</p>
               <p class="price">3000:-</p>
             </a>
-          </li>
-          <li class="product">
+          </article>
+          <article>
             <a href="#">
               <div class="product-img-wrapper">
                 <picture>
@@ -257,12 +257,12 @@
                 </picture>
               </div>
               <p class="country">Italien</p>
-              <p class="title">La Corde del Pozzo</p>
+              <h3 class="title">La Corde del Pozzo</h3>
               <p class="description">Bardolino</p>
               <p class="price">3000:-</p>
             </a>
-          </li>
-        </ul>
+          </article>
+        </div>
       </section>
       <section class="latest-news">
         <h2>Aktuellt på Vinbolaget</h2>
