Setting up the remaining page structure + linking them to the nav

--- a/index.html
+++ b/index.html
@@ -51,9 +51,13 @@
         </button>
         <nav class="hideNavbarAnimation">
           <ul>
-            <li><a class="link" href="#">Om Vinbolaget</a></li>
-            <li><a class="link" href="#">Viner</a></li>
-            <li><a class="link" href="#">Varukorg</a></li>
+            <li>
+              <a class="link" href="omVinbolaget/omvinbolaget.html"
+                >Om Vinbolaget</a
+              >
+            </li>
+            <li><a class="link" href="viner/viner.html">Viner</a></li>
+            <li><a class="link" href="varukorg/varukorg.html">Varukorg</a></li>
             <li>
               <!-- Is shown only at max-width: 640px -->
               <form
