On page Om Vinbolaget section about-company done + responsive

--- a/omVinbolaget/omvinbolaget.html
+++ b/omVinbolaget/omvinbolaget.html
@@ -112,6 +112,78 @@
           </p>
         </div>
       </section>
+      <section class="about-company">
+        <div class="info-container">
+          <h2>Över 70 000 flaskor i lager</h2>
+          <p>
+            Vinbolaget äger en av de största samlingarna av exklusiva viner i
+            Västeuropa. Vi lagrar våra viner under klimatkontrollerade och säkra
+            förhållanden, vilket gör att vi kan leverera alla viner inom 24
+            timmar och garantera superb kvalitet. Med Vinbolaget får du viner
+            direkt från källan till ett konkurrenskraftigt pris.
+          </p>
+        </div>
+        <div class="img-wrapper">
+          <picture>
+            <source
+              type="image/avif"
+              media="(max-width: 480px)"
+              srcset="
+                ../img/about/wineCellar/wine-cellar-mobile@1x.avif 1x,
+                ../img/about/wineCellar/wine-cellar-mobile@2x.avif 2x,
+                ../img/about/wineCellar/wine-cellar-mobile@3x.avif 3x
+              "
+            />
+            <source
+              type="image/webp"
+              media="(max-width: 480px)"
+              srcset="
+                ../img/about/wineCellar/wine-cellar-mobile@1x.webp 1x,
+                ../img/about/wineCellar/wine-cellar-mobile@2x.webp 2x,
+                ../img/about/wineCellar/wine-cellar-mobile@3x.webp 3x
+              "
+            />
+            <source
+              type="image/jpg"
+              media="(max-width: 480px)"
+              srcset="
+                ../img/about/wineCellar/wine-cellar-mobile@1x.jpg 1x,
+                ../img/about/wineCellar/wine-cellar-mobile@2x.jpg 2x,
+                ../img/about/wineCellar/wine-cellar-mobile@3x.jpg 3x
+              "
+            />
+            <source
+              type="image/avif"
+              srcset="
+                ../img/about/wineCellar/wine-cellar@1x.avif 1x,
+                ../img/about/wineCellar/wine-cellar@2x.avif 2x,
+                ../img/about/wineCellar/wine-cellar@3x.avif 3x
+              "
+            />
+            <source
+              type="image/webp"
+              srcset="
+                ../img/about/wineCellar/wine-cellar@1x.webp 1x,
+                ../img/about/wineCellar/wine-cellar@2x.webp 2x,
+                ../img/about/wineCellar/wine-cellar@3x.webp 3x
+              "
+            />
+            <source
+              type="image/jpg"
+              srcset="
+                ../img/about/wineCellar/wine-cellar@1x.jpg 1x,
+                ../img/about/wineCellar/wine-cellar@2x.jpg 2x,
+                ../img/about/wineCellar/wine-cellar@3x.jpg 3x
+              "
+            />
+            <img
+              src="../img/about/wineCellar/wine-cellar@1x.jpg"
+              alt="Vinkällare"
+              loading="lazy"
+            />
+          </picture>
+        </div>
+      </section>
     </main>
     <footer>
       <div class="footer-content">
