On page Om Vinbolaget section about-developer done + responsive

--- a/omVinbolaget/omvinbolaget.html
+++ b/omVinbolaget/omvinbolaget.html
@@ -184,6 +184,60 @@
           </picture>
         </div>
       </section>
+      <section class="about-developer">
+        <div class="img-wrapper">
+          <picture>
+            <source
+              type="image/webp"
+              media="(max-width: 480px)"
+              srcset="
+                ../img/about/developer/me-mobile@1x.webp 1x,
+                ../img/about/developer/me-mobile@2x.webp 2x,
+                ../img/about/developer/me-mobile@3x.webp 3x
+              "
+            />
+            <source
+              type="image/png"
+              media="(max-width: 480px)"
+              srcset="
+                ../img/about/developer/me-mobile@1x.png 1x,
+                ../img/about/developer/me-mobile@2x.png 2x,
+                ../img/about/developer/me-mobile@3x.png 3x
+              "
+            />
+            <source
+              type="image/webp"
+              srcset="
+                ../img/about/developer/me@1x.webp 1x,
+                ../img/about/developer/me@2x.webp 2x,
+                ../img/about/developer/me@3x.webp 3x
+              "
+            />
+            <source
+              type="image/png"
+              srcset="
+                ../img/about/developer/me@1x.png 1x,
+                ../img/about/developer/me@2x.png 2x,
+                ../img/about/developer/me@3x.png 3x
+              "
+            />
+            <img
+              src="../img/about/developer/me@1x.png"
+              alt="Ett porträtt av utvecklaren"
+              loading="lazy"
+            />
+          </picture>
+        </div>
+        <div class="info-container">
+          <h2>Om utvecklaren</h2>
+          <p>
+            Mitt namn är Robin Hawiz och jag är en blivande fullstackutvecklare.
+            Förhoppningsvis kommer webbutvecklingsprogrammet att lära mig de
+            nödvändiga kunskaperna som krävs för att kunna bygga hela
+            IT-lösningar på webben, både på front- och backend.
+          </p>
+        </div>
+      </section>
     </main>
     <footer>
       <div class="footer-content">
