Page Viner styling for filtering products

--- a/viner/viner.html
+++ b/viner/viner.html
@@ -106,6 +106,47 @@
       <div class="headline">
         <h1>Viner</h1>
       </div>
+      <div class="products">
+        <div class="filters">
+          <p class="search-results">Visar 5 resultat</p>
+          <div class="filter-wine-types">
+            <h4>Vintyper</h4>
+            <ul>
+              <li>
+                <label><input type="checkbox" />Rött vin</label>
+              </li>
+              <li>
+                <label><input type="checkbox" />Vitt vin</label>
+              </li>
+              <li>
+                <label><input type="checkbox" />Mousserande vin</label>
+              </li>
+              <li>
+                <label><input type="checkbox" />Rosévin</label>
+              </li>
+            </ul>
+          </div>
+          <div class="filter-price">
+            <h4>Pris</h4>
+            <div class="price-input-boxes">
+              <div class="input-box">
+                <label for="from">Från</label>
+                <div class="input-container">
+                  <input id="from" type="text" />
+                  <p class="valuta">kr</p>
+                </div>
+              </div>
+              <div class="input-box">
+                <label for="to">Till</label>
+                <div class="input-container">
+                  <input id="to" type="text" />
+                  <p class="valuta">kr</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="footer-content">
